[tool.poetry]
name = "images"
version = "0.1.0"
description = ""
authors = ["rafiwts <rafiwts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
djangorestframework = "^3.14.0"
pre-commit = "^3.4.0"
python-dotenv = "^1.0.0"
pillow = "^10.0.1"
celery = "^5.3.4"
redis = "^5.0.0"
psycopg2-binary = "^2.9.7"
pytest-django = "^4.5.2"

[tool.ruff]
ignore = ["E501", "E712", "F811"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "images.settings"
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
